# Django-Provas-API

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  documentacao-chamada-webservice.json  manage.py  pyproject.toml
core/: models.py  tests.py
core/fixtures/: users_fixture.json
core/migrations/: 0001_initial.py  0002_tentativaprova_nota_alter_questao_provas.py  0003_auto_20250413_1321.py  0004_questao_peso.py  0005_ranking_registroranking.py
core/tests/: auth_tests.py  participante_tests.py  participantes_tests.py  prova_tests.py  questao_tests.py  ranking_tests.py  resposta_participante_tests.py  resposta_tests.py  tests.py  user_tests.py
provas/: api.py  asgi.py  celery.py  middleware.py  permissions.py  schemas.py  settings.py  tasks.py  wsgi.py
